# thangld

./: ProjectHome.md  TribalWars.sln  TribalWars.vsmdi  medievalwars.sql  tribalwars.sql  tribalwarsDataSet.xsd
1280/1280/: 1280.csproj  Form1.cs  Form2.cs  Form3.Designer.cs  Form3.cs  app.config
1280/Lib1280/: Constant.cs  CustomWebRequest.cs  Lib1280.csproj  LoginUtility.cs  MyPolicy.cs  ShoppingUtility.cs  Utility.cs  app.config
BusinessLayer/App_Code/: BussinessLayerService.cs
DataLayer/: web.config
DataLayer/App_Code/: DataLayerService.cs  TribalWars.xsd  TribalWars.xss  TribalWarsMapping.dbml  TribalWarsMapping.dbml.layout  (+1 more)
TestProject1/: NHibernateHelper.cs
TribalWars/: Admin.aspx  Admin.aspx.cs  AttackReport.ascx  AttackReport.ascx.cs  AttackReportPanel.ascx  AttackReportPanel.ascx.cs  ChangeEmailAddress.ascx.cs  ChangePassword.ascx.cs  Copy (2) of web.config  CustomForm.master  Default.aspx  Default.aspx.cs  DefenseOtherReport.ascx  DefenseOtherReport.ascx.cs  DefenseReport.ascx  DefenseReport.ascx.cs  DemolishBuilding.ascx  FloatingModalDock.aspx  Global.asax  GraphicVillageInfo.ascx  GraphicVillageInfo.ascx.cs  HeroDetails.ascx  HeroDetails.ascx.cs  HeroList.ascx  HeroList.ascx.cs  InviteReport.ascx.cs  LoginBox.ascx  LoginBox.ascx.cs  Mail_Detail.aspx  Mail_Detail.aspx.cs  Mail_send.aspx  Mail_send.aspx.cs  MakeMarketOffer.ascx.cs  MerchantStatus.ascx.cs  OfferAcceptedReport.ascx  OtherOffers.ascx  PlayerBox.ascx  PlayerBox.ascx.cs  ReturnCommand.ascx  ReturnCommand.ascx.cs  (+131 more)
beans/: Admin.cs  Administrator.Methods.Authentication.cs  Administrator.Methods.Configuration.cs  Administrator.cs  Attack.cs  AttackReport.cs  Build.cs  BuildingType.cs  ClassDiagram1.cd  Configuration.cs  Copy of Report.cs  DefenseOtherReport.cs  DefenseReport.cs  Group.cs  Hero.cs  IVillageEffector.cs  IdentityObject.cs  IntelligentHero.cs  InviteReport.cs  InviteToTribeReport.cs  Job.cs  JobEnum.cs  Mail.cs  MailDetail.cs  Map.cs  MovingCommand.cs  MovingCommandLandingTimeComparer.cs  NumericConfiguration.cs  Offer.cs  OfferAcceptedReport.cs  Permission.cs  Player.Methods.Tribe.cs  Player.cs  Recruit.cs  RecruitHero.cs  Report.cs  ReportType.cs  Research.cs  ResearchPrice.cs  ResearchType.cs  (+48 more)
data/: project.mdf  project_log.ldf  tribalwars.mdf  tribalwars_log.ldf
document/: Copy of tribalwars.docx  bao cao dot 1.pptx  chuong 2.doc  du_an_phan_mem.doc  nhibernate.htm  time.txt  tribalwars.docx  tuong tac.vsd  tw.docx  use case.vsd  ~$ibalwars.docx
trunk/: LocalTestRun.testrunconfig  TW.emf  TribalWars.sln  tribalwars.sql
trunk/beans/: Map.cs  (+80 more)
trunk/document/mfgames-template-1.1.0/: ChangeLog  Makefile.am  configure  configure.in
trunk/document/mfgames-template-1.1.0/etc/: mfgames-template-1.0.pc.in
trunk/document/mfgames-template-1.1.0/src/: TemplateManager.cs
trunk/document/mfgames-template-1.1.0/src/test/: TemplateTest.cs
trunk/document/mfgames-template-1.1.0/vc7.1/Backup/: MfGames.Template.csproj  TemplateException.cs  mfgames-template.sln
trunk/document/mfgames-template-1.1.0/vc7.1/ModelSupport/MfGames/: default.txvpck
trunk/document/mfgames-template-1.1.0/vc7.1/ModelSupport/MfGames/Template/: default.txvpck
(+1444 files in other folders)
